--- a/DSA/AlgoBasics/Dq.html
+++ b/DSA/AlgoBasics/Dq.html
@@ -5,7 +5,7 @@
     <title>Divide and conquer</title>
 </head>
 <body>
-    <h1>ARRAYS!</h1>
+    <h1>Divide and conquer!</h1>
     <script>
     /*
    In divide and conquer ,problem is divided into smaller sub-problems and
