--- a/DSA/sorting/quick_sort.html
+++ b/DSA/sorting/quick_sort.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title>
-            Selection Sort
+            Quick Sort
         </title>
     </head>
     <body>
-        <h3>Selection Sort</h3>
+        <h3>Quick Sort</h3>
         <script>
             var items = [5,3,7,6,2,9];
             function swap(items, leftIndex, rightIndex){
